k8s/groceryfe_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grocery-frontend
  template:
    metadata:
      labels:
        app: grocery-frontend
    spec:
      containers:
      - name: grocery-frontend
        image: akashbora02/grocery-frontend:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: grocery-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: grocery-frontend
  ports:
  - port: 80
    targetPort: 80
