k8s/homeapp_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeapp-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homeapp-frontend
  template:
    metadata:
      labels:
        app: homeapp-frontend
    spec:
      containers:
      - name: homeapp-frontend
        image: akashbora02/homeapp-frontend:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: homeapp-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: homeapp-frontend
  ports:
  - port: 3002
    targetPort: 80
