k8s/todosbe_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-backend
  template:
    metadata:
      labels:
        app: todos-backend
    spec:
      containers:
      - name: todos-backend
        image: akashbora02/todos-backend:latest
        ports:
        - containerPort: 5001
...

apiVersion: v1
kind: Service
metadata:
  name: todos-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todos-backend
  ports:
  - port: 80
    targetPort: 5001
