k8s/todosfe_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-frontend
  template:
    metadata:
      labels:
        app: todos-frontend
    spec:
      containers:
      - name: todos-frontend
        image: akashbora02/todos-frontend:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: todos-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todos-frontend
  ports:
  - port: 80
    targetPort: 80
