k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /grocery
            pathType: Prefix
            backend:
              service:
                name: grocery-frontend-svc
                port:
                  number: 80

          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todos-frontend-svc
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeapp-frontend-svc
                port:
                  number: 80
          - path: /api/groceries
            pathType: Prefix
            backend:
              service:
                name: grocery-backend-svc
                port:
                  number: 80

          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todos-backend-svc
                port:
                  number: 80
